
 * When parsing files from disk, files are loaded via memory mapping, to increase parse speed.

 * Reduced memory overhead and lowered garbage collector pressure with Attribute, Node and Entity model optimisations.

 * Improved "abs:" absolute URL handling in Elements.attr("abs:href") and Node.hasAttr("abs:href").
   <https://github.com/jhy/jsoup/issues/97>

*** Release 1.5.2 [2011-02-27]
 * Fixed issue with selector parser where some boolean AND + OR combined queries (e.g. "meta[http-equiv], meta[content]")
   were being parsed incorrectly as OR only queries (e.g. former as "meta, [http-equiv], meta[content]")

 * Fixed issue where a content-type specified in a meta tag may not be reliably detected, due to the above issue.

 * Updated Element.text() and Element.ownText() methods to ensure <br> tags output as whitespace.

 * Tweaked Element.outerHtml() method to not generate initial newline on first output element.

 *** Release 1.5.1 [2011-02-19]

 * Integrated new single-pass selector evaluators, contributed by knz (Anton Kazennikov). This significantly speeds up
   the execution of combined selector queries.

 * Implemented workaround to fix Scala support. Contributed by bbeck (Brandon Beck).

 * Added ability to change an element's tag with Element.tagName(String), and to change many at once
   with Elements.tagName(String).

 * Added Node.wrap(html), Node.before(html), and Node.after(html), to allow HTML to be easily added to all nodes. These
   functions were previously supported on Elements only.

 * Added TextNode.splitText(index), which allows a text node to be split into two nodes at a specified index point.
   This is convenient if you need to surround some text in an element.

 * Updated Jsoup.Connection so that cookies set on a redirect response will be included on both the redirected request
   and response.

 * Infinite redirection loops in Jsoup.Connect are now prevented.
