@@ -11,6 +11,9 @@ jsoup changelog
  * Improved "abs:" absolute URL handling in Elements.attr("abs:href") and Node.hasAttr("abs:href").
    <https://github.com/jhy/jsoup/issues/97>
 
+ * Fixed cookie handling issue in jsoup.Connect where empty cookies would cause a validation exception.
+   <https://github.com/jhy/jsoup/issues/87>
+
 *** Release 1.5.2 [2011-02-27]
  * Fixed issue with selector parser where some boolean AND + OR combined queries (e.g. "meta[http-equiv], meta[content]")
    were being parsed incorrectly as OR only queries (e.g. former as "meta, [http-equiv], meta[content]")
